// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display can be used to display (escaped) strings 1`] = `"\\"Tom's assisstant said: \\\\\\"tuna.\\\\\\"\\""`;

exports[`display can be used to display (escaped) strings 2`] = `"Tom's assisstant said: \\"tuna.\\""`;

exports[`display can be used to display arrays 1`] = `"[1, 2, [4, 5]]"`;

exports[`display can be used to display arrays 2`] = `
Array [
  1,
  2,
  Array [
    4,
    5,
  ],
]
`;

exports[`display can be used to display functions 1`] = `
"x => x
(x, y) => x + y"
`;

exports[`display can be used to display functions 2`] = `[Function]`;

exports[`display can be used to display funny numbers 1`] = `
"1e+38
NaN
Infinity"
`;

exports[`display can be used to display funny numbers 2`] = `Infinity`;

exports[`display can be used to display lists 1`] = `"[1, [2, null]]"`;

exports[`display can be used to display lists 2`] = `
Array [
  1,
  Array [
    2,
    null,
  ],
]
`;

exports[`display can be used to display numbers 1`] = `"0"`;

exports[`display can be used to display numbers 2`] = `0`;

exports[`display can be used to display objects 1`] = `"{\\"a\\": 1, \\"b\\": 2, \\"c\\": {\\"d\\": 3}}"`;

exports[`display can be used to display objects 2`] = `
Object {
  "a": 1,
  "b": 2,
  "c": Object {
    "d": 3,
  },
}
`;

exports[`raw_display can be used to display (unescaped) strings directly 1`] = `"Tom's assisstant said: \\"tuna.\\""`;

exports[`raw_display can be used to display (unescaped) strings directly 2`] = `"Tom's assisstant said: \\"tuna.\\""`;
